backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mssql
        tier: backend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes: #Make sure storage class & persistent volume claims were created upfront.
      #We create persistent volume to retain data even if we move the container to a different node.
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  selector:
    app: mssql
    tier: backend
  ports:
    - protocol: TCP
      port: 14331 #in case if someother sql is running on sme port
      targetPort: 14331
  type: LoadBalancer
