shnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shnetworkpolicydemo
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: backend #Limit backend connectivity to namespace. 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    #- ipBlock: #Uncomment these to have more granular control over the traffic.
     #   cidr: 172.17.0.0/16
      #  except:
       # - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: default
    #- podSelector:
     #   matchLabels:
      #    role: frontend
    #ports:
    #- protocol: TCP
     # port: 6379
  #egress:
  #- to:
   # - ipBlock:
    #    cidr: 10.0.0.0/24
    #ports:
    #- protocol: TCP
     # port: 5978
